--- a/src/modules/rating/index.scss
+++ b/src/modules/rating/index.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: scroll;
 
   background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);
   color: white;
@@ -96,7 +97,7 @@
 
 
   .rating__come-back-button {
-    position: absolute;
+    position: fixed;
     top: 40px;
     right: 30px;
     font-size: 20px;
