--- a/src/modules/game/game-desktop/stages/stage-first/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-first/index.scss
@@ -1,5 +1,5 @@
 .game {
-  background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);
+  background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);;
   height: 100vh;
 
   &__header {
