--- a/src/modules/game/game-desktop/stages/stage-fourth/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-fourth/index.scss
@@ -29,7 +29,7 @@
   .stage-fourth__header {
     width: 100%;
     height: 20%;
-    background-color: cornsilk;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(125, 214, 114, 1) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,6 +41,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-grow: 1;
     width: 100%;
     box-sizing: border-box;
     padding-left: 25px;
