--- a/src/modules/game/game-desktop/stages/stage-first/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-first/index.scss
@@ -1,4 +1,6 @@
 .game {
+  display: flex;
+  flex-direction: column;
   background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);;
   height: 100vh;
 
@@ -99,9 +101,19 @@
   }
 
   .game__qr {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    flex: 1;
+    display: flex;
+    align-items: end;
+    justify-content: flex-end;
+    margin-bottom: 40px;
+    margin-right: 40px;
+
     img {
-      width: 180px;
-      height: 180px;
+      width: 40vh;
+      height: 40vh;
     }
   }
 
