--- a/src/modules/game/game-mobile/stages/stage-fourth/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-fourth/index.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background: linear-gradient(180deg, rgba(40, 93, 67, 1) 0%, rgba(147, 247, 166, 1) 74%, rgba(0, 255, 224, 1) 100%);
+  background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
