--- a/src/modules/rating/index.scss
+++ b/src/modules/rating/index.scss
@@ -7,6 +7,7 @@
   align-items: center;
   overflow: scroll;
 
+
   background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);
   color: white;
 
@@ -17,6 +18,11 @@
     display: flex;
     justify-content: center;
     padding-top: 40px;
+
+    @media (max-width: 768px) {
+      padding-top: 20px;
+      margin: 0;padding-bottom: 0;
+    }
   }
 
   .rating__users {
@@ -25,6 +31,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media (max-width: 768px) {
+      width: 70%;
+    }
   }
 
   .rating__user {
@@ -104,6 +114,16 @@
     font-family: 'Gluten', cursive;
     color: black;
     border-color: black;
+
+    @media (max-width: 768px) {
+     position: static;
+      width: 90%;
+      color: white;
+      border: 1px solid white;
+      top: 0;
+      right: 0;
+      margin-top: 20px;
+    }
 
     &:hover {
       color: white;
