set correct height for mobile

--- a/src/modules/game/game-desktop/stages/stage-fourth/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-fourth/index.scss
@@ -3,7 +3,7 @@
 .stage-fourth {
   background: white;
   display: flex;
-  height: 100vh;
+  height: 100svh;
 
   flex-direction: column;
   align-items: center;
