--- a/src/modules/game/game-mobile/index.scss
+++ b/src/modules/game/game-mobile/index.scss
@@ -3,7 +3,7 @@
 .mobile-wrapper-game {
   display: flex;
   flex-wrap: wrap;
-  height: 100vh;
+  height: 100svh;
   overflow: hidden;
 
   &:active {
