--- a/src/modules/game/game-desktop/stages/stage-first/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-first/index.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);;
-  height: 100vh;
+  height: 100svh;
 
   &__header {
     height: 250px;
