--- a/src/modules/game/game-mobile/stages/stage-second/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-second/index.scss
@@ -1,6 +1,6 @@
 .second-stage {
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   overflow: hidden;
   background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);
   display: flex;
