--- a/src/modules/game/game-mobile/stages/stage-seventh/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-seventh/index.scss
@@ -1,6 +1,6 @@
 .seventh-stage {
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   background: linear-gradient(180deg, rgba(35, 142, 89, 1) 0%, rgba(87, 254, 140, 1) 100%);
   display: flex;
   justify-content: center;
