--- a/src/modules/home/host/index.scss
+++ b/src/modules/home/host/index.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100svh;
 
   .home-host__title {
     font-size: 35px;
