--- a/src/modules/rating/index.scss
+++ b/src/modules/rating/index.scss
@@ -1,7 +1,7 @@
 
 .rating__wrapper {
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
   align-items: center;
