implemented all question type for desktop version

--- a/src/modules/game/game-desktop/stages/stage-first/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-first/index.scss
@@ -13,6 +13,11 @@
   }
 
   &__title {
+    span {
+      color: black;
+      -webkit-text-stroke: 3px white;
+    }
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,13 +51,16 @@
   }
 
   .game__start-game {
-    width: 150px;
-    height: 80px;
+    width: 350px;
+    height: 100px;
     margin-top: 15px;
     font-size: 35px;
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     color: white;
     border-color: white;
+    position: fixed;
+    right: 25px;
+    top: 30px;
 
     &:hover {
       background-color: white;
