--- a/src/modules/game/game-desktop/stages/stage-seventh/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-seventh/index.scss
@@ -102,7 +102,7 @@
     top: 40px;
     right: 30px;
     font-size: 20px;
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     color: black;
     border-color: black;
 
@@ -114,6 +114,6 @@
 
   .rating {
     margin-top: 60px;
-    width: 165px;
+    width: 257px;
   }
 }
