--- a/src/modules/game/game-desktop/stages/stage-sixth/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-sixth/index.scss
@@ -4,7 +4,7 @@
     top: 40px;
     right: 30px;
     font-size: 40px;
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     color: black;
     border-color: black;
 
