--- a/src/modules/game/game-mobile/stages/stage-second/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-second/index.scss
@@ -11,6 +11,7 @@
   .second-stage__font {
     font-size: 45px;
     color: white;
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
+    text-align: center;
   }
 }
