--- a/src/modules/game/game-mobile/stages/stage-sixth/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-sixth/index.scss
@@ -10,7 +10,7 @@
   }
 
   .sixth-stage__score {
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     color: white;
 
     div {
