--- a/src/modules/home/host/index.scss
+++ b/src/modules/home/host/index.scss
@@ -6,9 +6,10 @@
   height: 100svh;
 
   .home-host__title {
-    font-size: 35px;
+    font-size: 30px;
     display: flex;
     justify-content: center;
+    text-align: center;
   }
 
   .home-host__password, .home-host__login, .home-host__log-in {
