--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,9 +1,9 @@
-$first-color-with-opacity: rgba(0, 255, 140, 0.55);
-$second-color-with-opacity: rgba(0, 98, 255, 0.55);
-$third-color-with-opacity: rgba(255, 48, 52, 0.80);
-$fourth-color-with-opacity: rgba(255, 231, 48, 0.79);
+$first-color-with-opacity: rgba(226, 27, 60, 0.55);
+$second-color-with-opacity: rgba(19, 104, 206, 0.55);
+$third-color-with-opacity: rgba(216, 158, 0, 0.55);
+$fourth-color-with-opacity: rgba(38, 137, 12, 0.55);
 
-$first-color: rgba(0, 255, 140, 1);;
-$second-color: rgba(0, 98, 255, 1);
-$third-color: rgba(255, 48, 52, 1);
-$fourth-color: rgba(255, 231, 48, 1);
+$first-color: rgba(226, 27, 60);
+$second-color: rgba(19, 104, 206);
+$third-color: rgba(216, 158, 0);
+$fourth-color: rgba(38, 137, 12);
