--- a/src/components/admin-header/index.scss
+++ b/src/components/admin-header/index.scss
@@ -3,11 +3,16 @@
     font-size: 20px;
     color: white;
     text-decoration: none;
+    padding-right: 15px;
 
     @media (max-width: 768px) {
       color: black;
       display: flex;justify-content: center;
     }
+  }
+
+  &__border-right{
+    border-right: 1px solid white;
   }
 
   &__disabled {
