--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Gluten:wght@100;200;300;400;500;600;700;800;900&family=Titan+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Gluten:wght@100;200;300;400;500;600;700;800;900&family=Russo+One&display=swap');
 * {
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', 'Gluten', 'Russo One', sans-serif;
+}
+
+body {
+    /*background-image: url('../public/default.jpg');*/
+    /*background-size: cover;*/
 }
