--- a/src/modules/game/game-desktop/stages/stage-fourth/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-fourth/index.scss
@@ -15,7 +15,7 @@
     top: 20px;
     right: 20px;
     font-size: 40px;
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     color: black;
     border-color: black;
 
@@ -32,33 +32,43 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 70px;
+    font-size: 80px;
+
+    text-align: center;
   }
 
   .stage-fourth__body {
     position: relative;
+    max-height: 60%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-grow: 1;
     width: 100%;
+    height: auto;
     box-sizing: border-box;
     padding-left: 25px;
     padding-right: 25px;
     font-size: 50px;
 
     .stage-fourth__timer {
-      font-size: 100px;
-      width: 90px;
+      font-size: 80px;
+      width: auto;
       padding: 25px;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      div {
+        font-size: 50px;
+      }
     }
 
-    img {
-      width: 450px;
-      height: 450px;
-    }
 
     .stage-fourth__number-of-question {
+      width: auto;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -66,7 +76,7 @@
   }
 
   .stage-fourth__footer {
-    height: 200px;
+    height: 20%;
     background-color: ghostwhite;
     width: 100%;
 
@@ -119,9 +129,31 @@
       .icon {
         font-size: 55px;
         padding-right: 10px;
-        padding-bottom: 5px;
       }
     }
   }
 
+  .stage-fourth__number-of-question-count {
+    font-size: 80px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .stage-fourth__img {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 10px;
+
+    img {
+      object-fit: contain;
+      width: 70%;
+    }
+  }
+
+  .fourth-stage__puzzle-icon {
+    font-size: 120px;
+  }
 }
