--- a/src/modules/game/game-mobile/stages/stage-fifth/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-fifth/index.scss
@@ -1,6 +1,6 @@
 .stage-fifth {
   display: flex;
-  font-family: 'Gluten', cursive;
+  font-family: 'Dela Gothic One', cursive;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -29,7 +29,7 @@
 
     .incorrect-answer__title {
       color: white;
-      font-family: 'Gluten', cursive;
+      font-family: 'Dela Gothic One', cursive;
       font-size: 60px;
       display: flex;
       margin-bottom: 0;
@@ -39,11 +39,13 @@
     .incorrect-answer__streak {
       margin-top: 30px;
       color: white;
-      font-family: 'Gluten', cursive;
+      font-family: 'Dela Gothic One', cursive;
       font-size: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
+
+      text-align: center;
     }
 
     .incorrect-answer__icon {
@@ -66,7 +68,7 @@
 
   .correct-answer__title {
     color: white;
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     font-size: 60px;
     display: flex;
     margin-bottom: 0;
@@ -76,7 +78,7 @@
   .correct-answer__streak {
     margin-top: 30px;
     color: white;
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     font-size: 30px;
     display: flex;
     justify-content: center;
