--- a/src/modules/game/game-mobile/stages/stage-first/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-first/index.scss
@@ -17,7 +17,8 @@
   }
 
   .stage-first__font {
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
+    text-align: center;
     color: white;
   }
 }
