--- a/src/modules/game/game-mobile/stages/stage-seventh/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-seventh/index.scss
@@ -8,7 +8,7 @@
 
   .seventh-stage__score {
     margin-top: 50px;
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     color: white;
 
 
