--- a/src/modules/game/game-mobile/stages/stage-third/index.scss
+++ b/src/modules/game/game-mobile/stages/stage-third/index.scss
@@ -17,7 +17,7 @@
   }
 
   .third-stage__font {
-    font-family: 'Gluten', cursive;
+    font-family: 'Dela Gothic One', cursive;
     font-size: 35px;
     color: white;
   }
