--- a/src/modules/game/game-desktop/stages/stage-fourth/views/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-fourth/views/index.scss
@@ -7,6 +7,7 @@
     font-size: 80px;
     font-family: 'Dela Gothic One', cursive;
     margin: 0;
+    text-align: center;
 
     opacity: 0.8;
   }
